# Rose

./: .gitmodules  CMakeLists.txt  Readme.md
assets/: CMakeLists.txt
lib/: vcpkg.json
src/: main.cpp
src/client/: app.cpp  app.hpp  main.cpp
src/client/views/: base.cpp  base.hpp
src/logging/: CMakeLists.txt  logging.cpp  logging.hpp
src/rendering/engine/: logging.cpp  logging.hpp  models.cpp  models.hpp  test.cpp  ve_loader.hpp  ve_pipeline.cpp  ve_pipeline.hpp  ve_types.hpp  vk_debug.cpp  vk_debug.hpp  vk_engine.cpp  vk_engine.hpp  vk_init.hpp  vk_mesh.cpp  vk_mesh.hpp  vk_queue.hpp  vk_swapchain.cpp  vk_swapchain.hpp
src/rendering/engine/include/: VulkanEngine.hpp
src/rendering/engine/output/: ve_view.hpp  vk_glfw_output.cpp  vk_output.hpp
src/rendering/shaders/: basic_mesh.vert  compile_shaders.cmake  triangle.frag
src/server/: server.hpp
src/simulation/: TODO  actor.hpp  command.hpp  output.hpp  rule.hpp  simulation.hpp  world.hpp
src/simulation/components/: bullet.hpp
